--- a/index.html
+++ b/index.html
@@ -3,121 +3,157 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <link href="reset.css" type="text/css" rel="stylesheet">
+    <link href="resources/CSS/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
       <header>
         <div class="logo">
-          <img src="resources\Images/ic-logo.svg">
+          <img class="logoimg" src="resources\Images/ic-logo.svg">
           <span class="colmar">COLMAR</span>
           <span class="academy">ACADEMY</span>
         </div>
-        <nav class="container">
-          <span>On campus</span>
-          <span>Online</span>
-          <span>For companies</span>
-          <span>Sign in</span>
+        <nav>
+          <ul>
+            <li>On Campus</li>
+            <li>Online</li>
+            <li>Our Companies</li>
+            <li>Sign in</li>
+          </ul>
         </nav>
       </header>
-      <div class="container">
+      <div class="banner">
         <img src="resources\Images/banner.jpg">
-        <div class="maincontainer">
+        <div class="bannertext">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consecetur adlipiscing elit</h3>
           <h4>Start here</h4>
         </div>
       </div>
-      <div class="container 2">
-        <div class="container2bigbox">
-          <img src="">
-          <h2>It doesn't hurt to keep practicing</h2>
-          <p>"Carabitu vitae libero in ipsum porttoir consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumasari uma. Phassellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-          <span>Emanual, Sr. Strategist at Hiring.com</span>
+      <div class="info">
+        <div class="infobigbox">
+          <img src="resources\Images/information-main.jpg">
+          <div class="infotext">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <p>"Carabitu vitae libero in ipsum porttoir consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumasari uma. Phassellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <span>Emanual, Sr. Strategist at Hiring.com</span>
+          </div>
         </div>
-        <div class="container2smallbox">
-          <img src="" alt="">
-          <h3>Orientation date</h3>
-          <p>Tue 10/11 & Wed 10/12 8am-3pm</p>
-          <span>Read more</span>
-        </div>
-        <div class="container2smallbox">
-          <img src="" alt="">
-          <h3>Our Campus</h3>
-          <p>Find which campus is close by you</p>
-          <span>Read more</span>
-        </div>
-        <div class="container2smallbox">
-          <img src="">
-          <h3>Our guest lecture</h3>
-          <p>Join a keynote with Oliver Sack about usic in medical treatment</p>
-          <span>Read more</span>
+        <div class="infosmallboxes">
+          <div class="infosmallbox">
+            <img src="resources\Images/information-orientation.jpg">
+            <div class="infosmallboxtext">
+              <h3>Orientation date</h3>
+              <p>Tue 10/11 & Wed 10/12 8am-3pm</p>
+              <span>Read more</span>
+            </div>
+          </div>
+          <div class="infosmallbox">
+            <img src="resources\Images/information-campus.jpg">
+            <div class="infosmallboxtext">
+              <h3>Our Campus</h3>
+              <p>Find which campus is close by you</p>
+              <span>Read more</span>
+            </div>
+          </div>
+          <div class="infosmallbox gray">
+            <img src="resources\Images/information-guest-lecture.jpg">
+            <div class="infosmallboxtext">
+              <h3>Our guest lecture</h3>
+              <p>Join a keynote with Oliver Sack about usic in medical treatment</p>
+              <span>Read more</span>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="container 3">
+      <div class="courses">
         <h2>Start learning</h2>
-        <div class="container3box">
-          <img src="">
-          <h3>Software engineering</h3>
-          <h4>COURSES</h4>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
-        </div>
-        <div class="container3box">
-          <img src="">
-          <h3>Computer art</h3>
-          <h4>COURSES</h4>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-        </div>
-        <div class="container3box">
-          <img src="">
-          <h3>Design</h3>
-          <h4>COURSES</h4>
-          <p>User Experience Design, User Research, Visual Design</p>
-        </div>
-        <div class="container3box">
-          <img src="">
-          <h3>Data</h3>
-          <h4>COURSES</h4>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
-        </div>
-        <div class="container3box">
-          <img src="">
-          <h3>Business</h3>
-          <h4>COURSES</h4>
-          <p>Product Development, Business Development, Startup</p>
-        </div>
-        <div class="container3box">
-          <img src="">
-          <h3>Marketing</h3>
-          <h4>COURSES</h4>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        <div class="coursesboxes">
+          <div class="coursesbox">
+            <img src="resources\Images/course-software.jpg">
+            <div class="coursesboxtext">
+              <h3>Software engineering</h3>
+              <h4>COURSES</h4>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+          </div>
+          <div class="coursesbox">
+            <img src="resources\Images/course-computer-art.jpg">
+            <div class="coursesboxtext">
+              <h3>Computer art</h3>
+              <h4>COURSES</h4>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+          </div>
+          <div class="coursesbox">
+            <img src="resources\Images/course-design.jpg">
+            <div class="coursesboxtext">
+              <h3>Design</h3>
+              <h4>COURSES</h4>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+          <div class="coursesbox">
+            <img src="resources\Images/course-data.jpg">
+            <div class="coursesboxtext">
+              <h3>Data</h3>
+              <h4>COURSES</h4>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+          <div class="coursesbox">
+            <img src="resources\Images/course-business.jpg">
+            <div class="coursesboxtext">
+              <h3>Business</h3>
+              <h4>COURSES</h4>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="coursesbox">
+            <img src="resources\Images/course-marketing.jpg">
+            <div class="coursesboxtext">
+              <h3>Marketing</h3>
+              <h4>COURSES</h4>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="container 4">
-        <h2>Thesis exhibit</h2>
-        <div class="container4bigbox">
-          <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+      <h2 id="thesisheadline">Thesis exhibit</h2>
+      <div class="thesis">
+        <div class="thesisbigbox">
+          <video src="resources\videos/thesis.mp4">
           </video>
-          <h3>Reimagine urban</h3>
-          <p>"Carabitu vitae libero in ipsum porttoir consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumasari uma. Phassellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          <div class="thesisbigboxtext">
+            <h3>Reimagine urban</h3>
+            <p>"Carabitu vitae libero in ipsum porttoir consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumasari uma. Phassellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          </div>
         </div>
-        <div class="container4smallbox">
-          <img src="">
-          <h3>Fisma: Design and</h3>
-          <p>Designer showcase of new prototype product</p>
-        </div>
-        <div class="container4smallbox">
-          <img src="">
-          <h3>Now and then</h3>
-          <p>Research study about New York</p>
+        <div class="thesissmallboxes">
+          <div class="thesissmallbox gray">
+            <img src="resources\Images/thesis-fisma.jpg">
+            <div class="thesissmallboxtext">
+              <h3>Fisma: Design and</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="thesissmallbox">
+            <img src="resources\Images/thesis-now-and-then.jpg">
+            <div class="thesissmallboxtext">
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
+            </div>
+          </div>
         </div>
       </div>
       <footer>
           <span>Copyright 2016 Colmar Academy. All rights reserved</span>
           <nav>
-            <span>Terms</span>
-            <span>Privacy</span>
+            <ul>
+              <li>Terms</li>
+              <li>Privacy</li>
+            <ul>
           </nav>
       </footer>
-    </div>
   </body>
 </html>
