--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
           <img class="logoimg" src="resources\Images/ic-logo.svg">
           <span class="colmar">COLMAR</span>
           <span class="academy">ACADEMY</span>
+          <div class="headermobile">
+            <img src="resources\Images/ic-on-campus.svg" alt="">
+            <img src="resources\Images/ic-online.svg" alt="">
+            <img src="resources\Images/ic-login.svg" alt="">
+          </div>
         </div>
         <nav>
           <ul>
@@ -23,11 +28,12 @@
         </nav>
       </header>
       <div class="banner">
-        <img src="resources\Images/banner.jpg">
+        <div class="bannerimg">
+        </div>
         <div class="bannertext">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consecetur adlipiscing elit</h3>
-          <h4>Start here</h4>
+          <h4 id="startbutton">Start here</h4>
         </div>
       </div>
       <div class="info">
@@ -45,7 +51,7 @@
             <div class="infosmallboxtext">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12 8am-3pm</p>
-              <span>Read more</span>
+              <p class="readmore">Read more</p>
             </div>
           </div>
           <div class="infosmallbox">
@@ -53,7 +59,7 @@
             <div class="infosmallboxtext">
               <h3>Our Campus</h3>
               <p>Find which campus is close by you</p>
-              <span>Read more</span>
+              <p class="readmore">Read more</p>
             </div>
           </div>
           <div class="infosmallbox gray">
@@ -61,7 +67,7 @@
             <div class="infosmallboxtext">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about usic in medical treatment</p>
-              <span>Read more</span>
+              <p class="readmore">Read more</p>
             </div>
           </div>
         </div>
@@ -122,7 +128,7 @@
       <h2 id="thesisheadline">Thesis exhibit</h2>
       <div class="thesis">
         <div class="thesisbigbox">
-          <video src="resources\videos/thesis.mp4">
+          <video src="resources\videos/thesis.mp4" controls="">
           </video>
           <div class="thesisbigboxtext">
             <h3>Reimagine urban</h3>
