--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </nav>
       </header>
       <div class="banner">
-        <div class="bannerimg">
-        </div>
+        <img src="resources/Images/banner.jpg" alt="">
         <div class="bannertext">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consecetur adlipiscing elit</h3>
@@ -47,7 +46,7 @@
         </div>
         <div class="infosmallboxes">
           <div class="infosmallbox">
-            <img src="resources\Images/information-orientation.jpg">
+            <img src="resources/Images/information-orientation.jpg" alt="">
             <div class="infosmallboxtext">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12 8am-3pm</p>
@@ -55,7 +54,7 @@
             </div>
           </div>
           <div class="infosmallbox">
-            <img src="resources\Images/information-campus.jpg">
+            <img src="resources/Images/information-campus.jpg" alt="">
             <div class="infosmallboxtext">
               <h3>Our Campus</h3>
               <p>Find which campus is close by you</p>
@@ -63,7 +62,7 @@
             </div>
           </div>
           <div class="infosmallbox gray">
-            <img src="resources\Images/information-guest-lecture.jpg">
+            <img src="resources/Images/information-guest-lecture.jpg" alt="">
             <div class="infosmallboxtext">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about usic in medical treatment</p>
