--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <header>
         <div class="logo">
-          <img class="logoimg" src="../resources\Images/ic-logo.svg">
+          <img class="logoimg" src="resources\Images/ic-logo.svg">
           <span class="colmar">COLMAR</span>
           <span class="academy">ACADEMY</span>
           <div class="headermobile">
