--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link href="reset.css" type="text/css" rel="stylesheet">
-    <link href="../resources/CSS/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
       <header>
